# arkivisto

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: args.rs  config.rs  fs_utils.rs  main.rs  process.rs  scan.rs
