[package]
name = "arkivisto"
version = "0.1.0"
edition = "2024"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]

[dependencies]
anyhow = "1"
app_dirs = { package = "app_dirs2", version = "2" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
inquire = "0.7.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
